# tasty-recipe-network

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.md  compose.yaml  fly.toml  pyproject.toml  requirements.txt
app/: main.py
app/routes/: recipe_routes.py
authentication/: user_auth_routes.py
db/: db_connection.py  db_recipes.py  db_user_auth.py
models/: recipe_models.py  user_models.py
schemas/: recipe_schema.py  user_schema.py
tasty_recipe_network/: config.py  main.py
tasty_recipe_network/db/: db_connection.py  db_recipes.py  db_user_auth.py
tasty_recipe_network/models/: rating_models.py  recipe_models.py  user_models.py
tasty_recipe_network/routes/: recipe_routes.py  user_auth_routes.py
tasty_recipe_network/schemas/: recipe_schema.py  user_schema.py
tests/: conftest.py  fixtures.py  test.env  test_app.py  test_env_vars_pytest_env.py
tests/database/: db_database_connection.py
tests/integration_tests/: test_recipe_routes.py  test_user.py  test_user_database.py  test_user_routes.py
tests/model_test/: test_rating_model.py
tests/unit_tests/: db_recipe_unit_test.py  temp_test.py  user_unit_test.py
